--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest",
-    "test:integration": " cd scripts  && chmod +x ./run-integration.sh && ./run-integration.sh"
+    "test:integration": "./scripts/run-integration.sh"
   },
   "keywords": [],
   "author": "",
